ola-parser/src/testdata/syntaxTests/parsing/constructor_internal_public.sol
contract C {
    constructor() internal {}
}
// ----
// ParserError 9439: (38-44): Visibility already specified as "internal".
